kubernetes/serviceB/overlays/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serviceb
spec:
  ingressClassName: nginx
  rules:
    - host: serviceb-develop.192.168.5.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serviceb
                port:
                  number: 80
